app/assets/stylesheets/textures.scss
// This file adds classes to apply background textures and appropriate font
// colors to other containers

// Mixin for textures that stretch
@mixin cover-texture {
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-size: cover;
  -ms-behavior: asset-url('ie8/backgroundsize.min.htc');
}

// Mixin for textures that are tiled
@mixin tile-texture {
  background-repeat: repeat;
}

// Font color adjustment for darker textures
@mixin light-fonts {
  // Fallback background color
  background-color: #333;
  color: #FFF;
  a {
    color: #4cae4c;
  }
  a:hover,
  a:focus,
  a:active,
  a.active,
  a.disabled,
  a[disabled] {
    color: rgb(255, 157, 107);
  }
}

// Primary Dark Texture
.dark-texture {
  @include cover-texture;
  @include light-fonts;
  background-image: asset-url('static/footer_lodyas.png');
}

.neutral-texture {
  @include tile-texture;
  @include light-fonts;
  background-image: asset-url('static/shattered-dark.png');
}

// Primary Light Texture
.light-texture {
  @include cover-texture;
  background-image: asset-url('static/shattered.png');
}

.grid-texture {
  @include tile-texture;
  background-image: asset-url('static/old_mathematics_no_border.png');
}

.cloud-texture {
  @include cover-texture;
  background-attachment: scroll;
  background-image: asset-url('datasets-header.jpg');
}

.tree-texture {
  @include cover-texture;
  background-attachment: scroll;
  background-image: asset-url('home.jpg');
}

.bridge-texture {
  @include cover-texture;
  background-attachment: scroll;
  background-image: asset-url('tools-header.jpg');
}


.longwood-texture {
  @include cover-texture;
  background-attachment: scroll;
  background-image: asset-url('bli_221.jpg');
  // color: #333;
  min-height: 75px;
}

@media screen and (min-width: $screen-sm-min) {
  .longwood-texture {
    min-height: 150px;
  }
}

